Implemented a trade and accepttrade command

--- a/src/main/resources/locales/de_DE.yml
+++ b/src/main/resources/locales/de_DE.yml
@@ -6,3 +6,10 @@ command:
     no-self-trade: '%prefix% Du kannst <red>nicht <white>mit dir selbst handeln.'
     not-found: '%prefix% Der angegebene Spieler ist <red>offline<white>.'
     no-trading-with-matching-ip: '%prefix% Du darfst mit diesem Spieler aktuell <red>nicht <white>handeln. Wenn du der Meinung bist, dass dies ein Fehler sei, wende dich bitte an das Serverteam.'
+    already-invited: '%prefix% Du hast diesem Spieler bereits eine <red>Handel-Anfrage <white>gesendet.'
+    sent: '%prefix% Du hast dem Spieler <yellow>{0} <white>eine <green>Handel-Anfrage <white>gesendet.'
+    received: '%prefix% Du hast eine <green>Handel-Anfrage <white>von <yellow>{0} <white>erhalten.<newline>%prefix% Klicke <gold><bold><click:run_command:"/accepttrade {0}">HIER</click></bold><white>, um den Handel zu starten.'
+  accepttrade:
+    help: '%prefix% Bitte gib den <red>Namen <white>des Spielers an, dessen <green>Handel-Anfrage <white>du akzeptieren möchtest.'
+    not-found: '%prefix% Der angegebene Spieler ist <red>offline<white>.'
+    no-invitation: '%prefix% Dieser Spieler hat dir <red>keine <white>Handel-Anfrage gesendet oder sie ist <red>abgelaufen<white>.'
